# OOP_lr_6

./: CMakeLists.txt  main.cpp
include/: factory.h  knight.h  npc.h  observer.h  slaver.h  squirrel.h  visitor.h
src/: factory.cpp  knight.cpp  npc.cpp  observer.cpp  slaver.cpp  squirrel.cpp  visitor.cpp
test/: test_all.cpp
